Added more options and css file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Robot Gladiators!</title>
   </head>
   <body>
+    <h1 class="header">
+  
+    </h1>
     <script src="./assets/js/game.js"></script>
   </body>
 </html>
